2010-09-22  Romain Francois <romain@r-enthusiasts.com>

    * inst/include/Rcpp/sugar/Range.h : Range gains some operators (++,--,n etc ...)
    
    * inst/examples/ConvolveBenchmarks/convolve3_cpp.cpp: using the new Range
    operators
    
    * inst/include/Rcpp/sugar/operators/times.h: speed improvements. Not using 
    pointer to member functions seems to be beneficial.

2010-09-22  Romain Francois <romain@r-enthusiasts.com>

    * R/Module.R: set [[ and [[<- as regular methods too, which restores previous
    behavior

2010-09-17  Romain Francois <romain@r-enthusiasts.com>

    * src/Reference.cpp: new objects are created via a callback to R's new
    function, as R_do_new_object did always return the same environment
    
    * R/00_classes.R: new ref class C++Method to represent C++ methods and holding
    their external pointers directly (same idea as C++Field)
    
    * inst/include/Rcpp/Module.h: internal support for C++Method (template class
    S4_CppMethod)

2010-09-16  Romain Francois <romain@r-enthusiasts.com>

    * R/00_classes.R: moving classes definition here
    
    * inst/Rcpp/Module.h: added C++ class S4_field that builds S4 objects of 
    class C++Field. Build the list of fields as part of the creation of the 
    C++Class objects
    
    * src/Module.cpp: .Call functions CppField__get and CppField__set to get/set
    values of an object's field using external pointers directly (no std::map
    lookup internally)
    
    * R/Module.R: (unexported) functions .getField and .setField that 
    call CppField__get and CppField__set
    
    * inst/include/Rcpp/Reference.h: skeleton for a Rcpp::Reference class that 
    will help dealing with reference classes on the C++ side
    
    * src/Reference.cpp: implementation (needs update)

2010-09-15  Romain Francois <romain@r-enthusiasts.com>

    * DESCRIPTION: added the declaration MinimumSvnRev to control which version
    of R-devel we need so that Rcpp fully works, currently set to 52905